2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘revlist’ from global state of rlog(1).

	* rlog.c (struct criteria): New.
	(revlist): Delete var.
	(getnumericrev): Take 2nd arg ‘criteria’; use ‘criteria->revs’.
	(putrevpairs): Unmark ‘data’ as ‘RCS_UNUSED’;
	interpret ‘data’ as ‘criteria’; use ‘criteria->revs’.
	(main): Add auto var ‘criteria’; update
	calls to ‘parse_revpairs’, ‘getnumericrev’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Make ‘parse_revpairs’ accept/pass-through opaque data.

	* rcsutil.c (parse_revpairs): Take arg ‘data’; call ‘put’ with it.
	* base.h (parse_revpairs): Update func decl.
	* rcs.c (putdelrev): Take 4th arg ‘data’; mark it ‘RCS_UNUSED’.
	(main): Update call to ‘parse_revpairs’.
	* rlog.c (putrevpairs): Take 4th arg ‘data’; mark it ‘RCS_UNUSED’.
	(main): Update call to ‘parse_revpairs’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘datelist’, ‘duelst’ from global state of rlog(1).

	* rlog.c (struct date_selection): New.
	(datelist, duelst): Delete vars.
	(extdate, getdatepair): Take 2nd arg ‘datesel’;
	use ‘datesel->in’, ‘datesel->by’.
	(main): Add auto var ‘datesel’; update call to ‘getdatepair’;
	use ‘datsel.by’; update call to ‘extdate’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘lockflag’ from global state of rlog(1).

	* rlog.c (lockflag): Delete var.
	(extractdelta): Add 2nd arg ‘lockflag’.
	(exttree): Likewise; update call to ‘extractdelta’, self.
	(main): Add auto var ‘lockflag’; update call to ‘exttree’.

2011-10-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Remove ‘branchflag’ from global state of rlog(1).

	* rlog.c (branchflag): Delete var.
	(getnumericrev): Take arg BRANCHFLAG.
	(main): Add auto var ‘branchflag’; update call to ‘getnumericrev’.

2011-10-13  Ian Delaney  <della5@iinet.com.au>  (tiny change)

	Fix bug: Make sure rcsgen.c sees ‘makedirtemp’ decl.

	* rcsgen.c: #include "b-feph.h".

2011-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>
